# player-generator

./: .gitignore  AGENTS.md  FILE_MANIFEST.sha256  LICENSE  Makefile  README.md  THIRD_PARTY_NOTICES.md  conftest.py  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
apps/formula-workbench/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
apps/formula-workbench/api/: README.md
apps/formula-workbench/src/: App.test.tsx  App.tsx  main.tsx  styles.css  vite-env.d.ts
apps/reference-data/: README.md
apps/reference-data/config/: default.yaml
apps/reference-data/tests/: test_adapter_normalization.py  test_canonical.py  test_ingest.py  test_math.py  test_publication.py  test_registration.py
apps/roster-generator/: README.md
apps/roster-generator/config/: default.yaml
apps/roster-generator/tests/: test_comparison.py  test_generator.py  test_reference_selection.py  test_roster_publication.py
config/: default.yaml
docs/: DATA_BOUNDARIES.md  RATING_MODEL.md
docs/planning/: ATTRIBUTE_FORMULAS.md  DATA_CONTRACTS.md  DECISIONS.md  LEARNINGS.md  NBA_GM_MVP_HANDOFF.md  README.md  USER_STORY_WORKFLOW.md
docs/planning/epics/: EPIC-01-project-structure.md  EPIC-02-reference-data.md  EPIC-03-attributes.md  EPIC-04-roster-package.md  EPIC-05-formula-api.md  (+3 more)
docs/presentations/: PLAYER_GENERATOR_TECHNICAL_OVERVIEW.md
generated_data/: README.md  default_roster.json  fictional_players.csv
reference_data/: README.md  source_manifest.json
reference_data/processed/: README.md
reports/: README.md  comparison_report.json  comparison_table.csv
roster_data/: README.md  default_roster.json
schemas/: default_roster.schema.json
scripts/: build_reference_data.py  compare_rosters.py  download_reference_data.py  generate_roster.py  update_file_manifest.py
src/player_generator/: __init__.py  __main__.py  cli.py  comparison.py  config.py  generator.py  ingest.py  names.py  pipeline.py  ratings.py  schema.py  util.py
tests/: conftest.py  test_architecture.py  test_comparison.py  test_entrypoints.py  test_file_manifest.py  test_generator.py  test_ingest.py  test_makefile.py  test_pipeline.py  test_ratings.py  test_util.py
(+88 files in other folders)
