[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nba-gm-roster-tools"
version = "0.2.0"
description = "Offline applications for building basketball reference data and roster data."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "NBA GM contributors" }]
dependencies = [
  "numpy>=2.0,<3",
  "pandas>=2.2,<4",
  "pyarrow>=17,<26",
  "PyYAML>=6.0,<7",
  "Faker>=24,<41",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "ruff>=0.6,<1",
  "mypy>=1.10,<2",
]

[project.scripts]
reference-data = "reference_data_app.cli:main"
roster-generator = "roster_generator.cli:main"

[tool.setuptools.packages.find]
where = [
  "apps/reference-data/src",
  "apps/roster-generator/src",
  "packages/data-contracts/src",
  "packages/attribute-engine/src",
]
namespaces = false

[tool.setuptools.package-data]
player_data_contracts = ["schemas/*.json"]

[tool.pytest.ini_options]
testpaths = ["apps", "packages", "tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
